# time_series_forecasting

./: .gitignore  Readme.md  forecast.py  forecast_on_one_big_scale_time_series.ipynb  forecast_on_one_small_scale_time_series.ipynb  forecast_on_one_time_series.py  forecast_with_or_without_scaling.py  pyproject.toml
